--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script> 
-    
+
+                                        <!--SECCION BARRA DE NAVEGACION-->
+
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #3f4244;">
-        <div class="container">
+        <div class="container my-3">
           <img src="./elementos/codoacodo.png" class="img">
           <a class="navbar-brand">Conf Bs As</a>
           </html><button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,45 +50,50 @@
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
+                                             <!--SECCION CAROUSEL-->
+
         <div class="carousel-inner">
           <div class="carousel-item active d-item">
             <img src="./elementos/ba1.jpg" class="d-block w-100 d-img" alt= "primera imagen">
-            <div class="carousel-caption d-none d-md-block  d-sm-block d-lg-block text-run">
+            <div class="carousel-caption d-md-block  d-sm-block d-lg-block text-run">
               <h2>Conf Bs As</h2>
               <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra
                 comunidad el conocimiento y la experiencia de los expertos que estan creando
                 el futuro de Internet. Ven a conocer a miembros del evento, a otros
-                estudiantes de Codo a codoy los orado4res del primer nivel para tí.
+                estudiantes de Codo a codoy los oradores de primer nivel para tí.
                 Te esperamos!</p>
               <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
-              <button type="button" class="btn btn-success">Comprar tickets</button>
+              <button type="button" class="btn btn-personal text-light nverde">Comprar tickets</button>
 
             </div>
           </div>
           <div class="carousel-item d-item">
             <img src="./elementos/ba2.jpg" class="d-block w-100 d-img" alt="segunda imagen">
-            <div class="carousel-caption d-none d-md-block text-run">
+            <div class="carousel-caption d-md-block  d-sm-block d-lg-block text-run d-">
               <h2>Conf Bs As</h2>
               <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra
                 comunidad el conocimiento y la experiencia de los expertos que estan creando
                 el futuro de Internet. Ven a conocer a miembros del evento, a otros
-                estudiantes de Codo a codoy los orado4res del primer nivel para tí.
+                estudiantes de Codo a codoy los oradores de primer nivel para tí.
                 Te esperamos!</p>
+                <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
+                <button type="button" class="btn btn-personal text-light nverde">Comprar tickets</button>
             </div>
           </div>
           <div class="carousel-item d-item">
             <img src="./elementos/ba3.jpg" class="d-block w-100 d-img" alt="tercera imagen">
-            <div class="carousel-caption d-none d-md-block text-run">
+            <div class="carousel-caption d-md-block  d-sm-block d-lg-block text-run">
               <h2>Conf Bs As</h2>
               <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra
                 comunidad el conocimiento y la experiencia de los expertos que estan creando
                 el futuro de Internet. Ven a conocer a miembros del evento, a otros
-                estudiantes de Codo a codoy los orado4res del primer nivel para tí.
+                estudiantes de Codo a codoy los oradores de primer nivel para tí.
                 Te esperamos!</p>
+                <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
+                <button type="button" class="btn btn-personal text-light nverde">Comprar tickets</button>
             </div>
           </div>
         </div>
-   </section>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
@@ -95,15 +102,18 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+   </section>
         <div class="conoce">
-        <h6>conoce a los oradores</h6> 
+        <h6>CONOCE A LOS</h6> 
           <h2><b>ORADORES</b></h2>
         </div>
+                                                   <!--SECCION ORADORES-->
+
         <div class="conte">
           <div class="row">
           <div class="col-sm-10 col-md-4 col-lg-2 col-xl-2">
             <div class="card">
-              <img src="./elementos/steve.jpg" class="card-img-top" alt="...">
+              <img src="./elementos/steve.jpg" class="card-img img-fluid" alt="...">
               <div class="card-body">
                 <button type="button" class="btn btn-warning"
                 style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
@@ -118,7 +128,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-10 col-md-4 col-lg-2 col-xl-2">
+          <div class="col-sm-10 col-md-4 col-lg-2 col-xl-2"style="padding-top: 10px;" >
             <div class="card">
               <img src="./elementos/bill.jpg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -135,7 +145,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-10 col-md-4 col-lg-2 col-xl-2">
+          <div class="col-sm-10 col-md-4 col-lg-2 col-xl-2" style="padding-top: 10px;">
             <div class="card">
               <img src="./elementos/ada.jpeg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -154,6 +164,86 @@
           </div>
         </div>
        </div>
+                                      <!--SECCION UBICACION-->
 
+      <section class="mb-4"  id="lugar">
+        <div class="row g-0">
+            <div class="col-md">
+                <img src="./elementos/honolulu.jpg" alt="Honolulu" class="img-fluid">
+             </div>
+            <div class="col-md text-light h-100 bg-aside1" style="background-color: #3f4244;">
+                <h2>Bs As - Octubre</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At placeat molestias vitae unde facere voluptatem minus voluptates commodi corrupti tenetur! Pariatur qui enim animi sapiente sed error similique molestiae ipsum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, excepturi deleniti harum facilis id, a illo assumenda officiis illum praesentium eos. Qui laborum ratione in hic ducimus debitis voluptatum aperiam.</p>
+                <a class="btn btn-outline-light" href="#">Conocé más</a>
+             </div>
+        </div>
+    </section>
+                                     <!--SECCION FORMULARIO-->
+
+    <section class="container" id="form-orador">
+    <div class="row justify-content-center">
+        <div class="col-lg-8 col-xl-7">
+            <div class="conoce">
+              <h6>CONVIERTETE EN UN</h6> 
+                <h2><b>ORADOR</b></h2>
+              </div>
+            <p class="text-center">Anótate como orador para dar una charla ignite. Cuéntanos de qué quieres hablar!</p>
+            <form action="">
+                <div class="row gx-2">
+                    <div class="col-md mb-3">
+                        <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre" required>
+                    </div>
+                    <div class="col-md mb-3">
+                        <input type="text" class="form-control" placeholder="Apellido" aria-label="Apellido" required>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col mb-3">
+                        <input type="email" class="form-control" placeholder="Email" aria-label="Email" required>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col mb-3">
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"
+                            placeholder="Sobre qué quieres hablar?" required></textarea>
+                        <div id="emailHelp" class="form-text mb-3">Recuerda incluir un título para tu charla.</div>
+                        <div class="d-grid">
+                            <button type="submit" class="btn btn-lg btn-form btn-personal text-light">Enviar</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</section>
+                                                 <!--SECCION FOOTER-->
+
+<footer id="main-footer">
+  <div class="container">
+      <ul class="nav justify-content-center justify-content-lg-between align-items-center">
+          <li class="nav-item">
+              <a class="nav-link" href="#">Preguntas <span>frecuentes</span></a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">Contáctanos</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">Prensa</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">Conferencias</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">Términos y <span>condiciones</span></a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">Privacidad</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">Estudiantes</a>
+          </li>
+      </ul>
+  </div>
+</footer>
 </body>
 </html>
