Cambio en el menú
Se agrego una propiedad para mantener el menú mientras se desplaza por la pagina

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
                                         <!--SECCION BARRA DE NAVEGACION-->
 
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #3f4244;">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #3f4244;">
         <div class="container my-3">
           <img src="./elementos/codoacodo.png" class="img">
           <a class="navbar-brand">Conf Bs As</a>
