Cambios en el navbar
puse las anclas correspondiente a cada sección y las linkee en el navbar

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                 <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Los ordenadores</a>
+                <a class="nav-link" href="#ancla-oradores">Los oradores</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">El lugar y la fecha</a>
+                <a class="nav-link" href="#ancla-ubicacion">El lugar y la fecha</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Conviértete en ordenador</a>
+                <a class="nav-link" href="#ancla-form-orador">Conviértete en orador</a>
               </li>
                 <li class="nav-item">
-                  <a class="nav-link" id="nav-link-verde" href="#">Comprar tickets</a>
+                  <a class="nav-link  " id="nav-link-verde" href="#">Comprar tickets</a>
                 </li>
             </ul>
           </div>
@@ -105,7 +105,7 @@
    </section>
         <div class="conoce">
         <h6>CONOCE A LOS</h6> 
-          <h2><b>ORADORES</b></h2>
+          <a id="ancla-oradores"><h2><b>ORADORES</b></h2></a>
         </div>
                                                    <!--SECCION ORADORES-->
 
@@ -165,7 +165,7 @@
         </div>
        </div>
                                       <!--SECCION UBICACION-->
-
+       <a id="ancla-ubicacion"></a>
       <section class="mb-4"  id="lugar">
         <div class="row g-0">
             <div class="col-md">
@@ -185,7 +185,7 @@
         <div class="col-lg-8 col-xl-7">
             <div class="conoce">
               <h6>CONVIERTETE EN UN</h6> 
-                <h2><b>ORADOR</b></h2>
+                <a id="ancla-form-orador"><h2><b>ORADOR</b></h2></a>
               </div>
             <p class="text-center">Anótate como orador para dar una charla ignite. Cuéntanos de qué quieres hablar!</p>
             <form action="">
